# drbd-utils

./: .gitignore  .gitlab-ci.yml  .gitmodules  0001-windrbd-intentional-diskless-flag.patch  ChangeLog  Dockerfile  Dockerfile.in  INSTALL.windrbd  Makefile.in  README-windrbd.md  README.md  autogen.sh  configure.ac  drbd-utils.cdx.json.in  drbd.spec.in
.gitlab/: gitlab-utils.sh
.gitlab/drbd-utils-build-docker/: Dockerfile  Makefile
config/lnav/: drbd_log.json
debian/: README.Debian  changelog  control  control.ubuntu-precise  copyright  drbd-utils.bash-completion  drbd-utils.config  drbd-utils.dirs  drbd-utils.postinst  drbd-utils.postrm  drbd-utils.templates  rules  watch
documentation/: Makefile.in  drbd.conf.xml.in  drbd.xml  drbdadm.xml  drbdsetup-options.xml  drbdsetup.xml.in  ra2refentry.xsl
documentation/common/: Makefile_v84_com.in  Makefile_v84_com_post  Makefile_v9_com.in  Makefile_v9_com_post
documentation/ja/: README.txt
documentation/legacy-83/: Makefile.in
documentation/legacy-84/: .gitignore  Makefile.in  drbd.conf.xml  drbdsetup.xml
documentation/v83/: .gitignore  Makefile.in  drbd.conf.xml  drbdsetup.xml
documentation/v84/: Makefile  Makefile.in  drbd.conf.xml  drbd.xml  drbdadm.xml  drbddisk.xml  drbdmeta.xml  drbdsetup.xml
documentation/v9/: Makefile  Makefile.in  drbd-configured.target.adoc  drbd-graceful-disconnect.service.adoc  drbd-graceful-down.service.adoc  drbd-graceful-shutdown.service.adoc  drbd-lvchange@.service.adoc  drbd-overview.xml  drbd-promote@.service.adoc  drbd-reconfigure-suspend-or-error@.service.adoc  drbd-services@.target.adoc  drbd-wait-promotable@.service.adoc  drbd.conf.xml.in  drbd.service.adoc  drbd.xml  drbd@.service.adoc  drbd@.target.adoc  drbdadm.xml  drbdmeta.xml  drbdmon.xml  drbdsetup-options.xml  drbdsetup.xml.in  ocf.ra@.service.adoc
m4/: AX_CXX_COMPILE_STDXX_11.m4
sbom/: drbd-utils.cdx.json.in  drbd-utils.spdx.json.in
scripts/: .gitignore  Makefile.in  README  crm-fence-peer.9.sh  crm-fence-peer.sh  drbd  drbd-attr  drbd-configured.target  drbd-demote-or-escalate@.service  drbd-demote-or-escalate@.service.in  drbd-graceful-disconnect.service.in  drbd-graceful-down.service.in  drbd-graceful-shutdown.service  drbd-graceful-shutdown.service.in  drbd-lvchange@.service  drbd-overview.pl  drbd-promote@.service  drbd-promote@.service.in  drbd-reconfigure-suspend-or-error@.service  drbd-reconfigure-suspend-or-error@.service.in  drbd-resource-host-map.py  drbd-service-shim.sh  drbd-service-shim.sh.in  drbd-services@.target  drbd-verify.py  drbd-wait-promotable.sh  drbd-wait-promotable@.service  drbd-wait-promotable@.service.in  drbd.conf.example  drbd.lang  drbd.ocf  drbd.preset  drbd.rules.in  drbd.service  drbd.service.in  drbd.shellfuncs.sh  drbd.tmpfiles.conf  drbd@.service  drbd@.service.in  drbd@.target  (+12 more)
scripts/VCS/: DRBDConfigureTypes.cf  DRBDPrimaryTypes.cf  README.md  drbd_inc.sh
scripts/multipath/: drbd.conf
selinux/: Makefile  drbd.fc  drbd.te
tests/: run.sh
tests/v84/: create-md.test  man.res  man.test
tests/v9/: adjust_bitmap_disable.res  adjust_bitmap_disable.test  adjust_bitmap_enable.test  adjust_bitmap_unknown.test  adjust_disk_opts_late.res  adjust_disk_opts_late.test  adjust_order.res  adjust_order.test  adjust_proxy.res  adjust_proxy.test  adjust_set_option_connect.res  adjust_set_option_connect.test  adjust_switch_diskfull_r0.res  adjust_switch_diskfull_r0.test  adjust_switch_interface_r0.res  adjust_switch_interface_r0.test  adjust_tiebreaker_swap.res  adjust_tiebreaker_swap.test  block-size.res  block-size.test  bugfixrelease.test  check-resize-bm-offset.test  create-md-uuid-opts.test  create-md.test  drbd_8.4.res  drbd_8.4.test  drbdctrl.res  drbdctrl.test  drbdmeta_force_flag.res  drbdmeta_force_flag.test  drbdsetup_show_adjust_proxy.txt  drbdsetup_show_adjust_proxy_no_path.txt  drbdsetup_show_bitmap_disable.txt  drbdsetup_show_bitmap_enable.txt  drbdsetup_show_bitmap_unknown.txt  drbdsetup_show_disk_opts_late.txt  drbdsetup_show_set_option_connect.txt  drbdsetup_show_switch_diskfull_r0.txt  drbdsetup_show_switch_interface_r0.txt  drbdsetup_show_tiebreaker_swap.txt  (+82 more)
user/: .gitignore  Makefile.in  config_flags.c  drbdadm.h  drbdadm_adjust.c  drbdadm_dump.c  drbdadm_main.c  drbdadm_parser.c  drbdadm_parser.h  drbdadm_postparse.c  drbdadm_scanner.fl  drbdadm_usage_cnt.c  drbdmeta.c  drbdmeta_scanner.fl  drbdsetup.c  drbdtool_common.c  drbdtool_common.h  libgenl.c  shared_prereqs.mk
user/drbd_mon/: Args.h  CompactDisplay.cpp  ConfigOption.cpp  ConfigOption.h  Configurator.h  DebugDisplay.cpp  DebugDisplay.h  Display.cpp  Display.h  DrbdConnection.cpp  DrbdConnection.h  DrbdResource.h  DrbdRole.h  DrbdVolume.cpp  GenericDisplay.h  LiveStatus.cpp  LiveStatus.h  Makefile.in  MessageLog.cpp  StateFlags.h  comparators.cpp  exceptions.h  livestatus_main.cpp  test.cpp
user/drbdmon/: Args.cpp  Args.h  CompactDisplay.cpp  CompactDisplay.h  ConfigOption.cpp  ConfigOption.h  Configurable.h  Configurator.h  CoreIo.h  DebugDisplay.cpp  DebugDisplay.h  Display.cpp  Display.h  DrbdConnection.cpp  DrbdConnection.h  DrbdMon.cpp  DrbdMon.h  DrbdMonConsts.cpp  DrbdMonConsts.h  DrbdMonCore.h  DrbdResource.cpp  DrbdResource.h  DrbdRole.cpp  DrbdVolume.cpp  DrbdVolume.h  EventsIo.cpp  EventsIo.h  EventsIoWakeup.h  EventsSourceSpawner.cpp  EventsSourceSpawner.h  GenericDisplay.h  IntervalTimer.cpp  IntervalTimer.h  Makefile.in  MessageLog.cpp  MessageLog.h  MessageLogNotification.cpp  MessageLogNotification.h  MessageLogObserver.h  MonitorEnvironment.h  (+29 more)
user/legacy/: Makefile.in  drbdadm.h  drbdadm_main.c  drbdadm_parser.c  drbdadm_usage_cnt.c  drbdsetup.c
user/legacy-84/: .gitignore  Makefile.in  config_flags.c  drbdadm.h  drbdadm_main.c  drbdadm_parser.c  drbdadm_parser.h  drbdadm_scanner.fl  drbdadm_usage_cnt.c  drbdsetup.c
user/linux/: drbd_config.h
user/shared/: .gitignore  Makefile.in  drbd_buildtag.sh  drbd_endian.h  drbdmeta.c  drbdmeta.h  drbdmeta_linux.c  drbdmeta_parser.h  drbdmeta_scanner.fl  drbdmeta_windrbd.c  libgenl.c  libgenl.h  libgenl_windrbd.c  libnla.c  path.h  (+11 more)
(+310 files in other folders)
